# linedetector

./: CMakeLists.txt  README.md
img/: squre.jpg_lines.txt
src/: CMakeLists.txt  linedetection.cpp  linedetector.cpp  linedetector.h  system.h
